# critter-capture

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: streamlit_app.py
config/: pipeline.yaml
data/: README.txt  sample_data.csv
notebooks/: data_exp.ipynb  eda.ipynb  sample_data.ipynb  train_resnet50.ipynb
scripts/: run_resnet50_baseline.py  start_mlflow_server.sh
src/critter_capture/: __init__.py  cli.py
src/critter_capture/baselines/: __init__.py  resnet18.py  resnet50.py
src/critter_capture/config/: __init__.py  loader.py  schema.py
src/critter_capture/data/: __init__.py  dataset.py  splits.py  transforms.py
src/critter_capture/metrics/: classification.py
src/critter_capture/models/: __init__.py  cnn.py
src/critter_capture/pipelines/: __init__.py  base.py  deployment.py  inference.py  training.py  training_loop.py
src/critter_capture/services/: __init__.py  deployment.py  mlflow_service.py  ray_utils.py  storage.py
src/critter_capture/utils/: __init__.py  env.py  io.py  logging.py  randomness.py
src/critter_capture/zenml_support/: __init__.py  pipelines.py
tests/: __init__.py  test_config.py  test_data.py  test_model.py
